# lomba

./: .gitignore  README.md  dataloading.ipynb  main.py  pyproject.toml  submit_training.sh
examples/: dataloading.ipynb  wandb.ipynb
paper/: architecture_diagram.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  mamba_model_diagram.md
paper/bib/: refs.bib
paper/sections/: conclusion.tex  evaluation.tex  introduction.tex  model.tex  moe_tpp.tex  preliminaries.tex  relatedwork.tex  training.tex
