[project]
name = "lomba"
version = "0.1.0"
description = "Tripudium LOB Mamba models"
readme = "README.md"
authors = [
    { name = "Francesco", email = "francesco.papini@warwick.ac.uk"},
    { name = "Martin", email = "martin@tripudium.tech" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython==8.32.0"
]

[project.scripts]
lomba = "lomba:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable standard, pyflakes & import-sorting rules

