[project]
name = "lomba"
version = "0.1.0"
description = "Tripudium LOB Mamba models"
readme = "README.md"
authors = [
    { name = "Francesco", email = "francesco.papini@warwick.ac.uk"},
    { name = "Martin", email = "martin@tripudium.tech" }
]
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "ipykernel>=6.29.5",
    "ipython==8.32.0",
    "mambapy>=1.2.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pytz>=2025.2",
    "torch>=2.9.1",
    "typing>=3.10.0.0",
    "wandb>=0.23.0",
]

[project.scripts]
lomba = "lomba:main"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable standard, pyflakes & import-sorting rules

